bluejay-parser/tests/snapshots/schema_definition_integration_test__error@referenced_type_is_not_an_interface.graphql.snap
---
source: bluejay-parser/tests/schema_definition_integration_test.rs
expression: formatted_errors
input_file: bluejay-parser/tests/test_data/schema_definition/error/referenced_type_is_not_an_interface.graphql
---
Error: Referenced type `MyObject` is not an interface
   ╭─[referenced_type_is_not_an_interface.graphql:5:31]
   │
 5 │ type MyOtherObject implements MyObject {
   │                               ────┬───  
   │                                   ╰───── Not an interface
───╯
